# modern-cpp-course

./: README.md
homework_1/data/: commands.sh
homework_2/igg_image/: CMakeLists.txt
homework_2/igg_image/src/igg_image/: CMakeCache.txt  CMakeLists.txt  image.cpp  image.h  main.cpp
homework_2/igg_image/tests/: CMakeLists.txt  test_image.cpp
homework_3/igg_image/data/: pbmlib2.ascii.ppm  sign_2.ppm  simple_image.ppm  simple_image_2.ppm
homework_3/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
homework_3/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp  ppm_strategy.h
homework_3/igg_image/tests/: CMakeLists.txt  tests.cpp
homework_4/: readme.md
homework_4/digit_counter/: CMakeLists.txt
homework_4/digit_counter/src/: CMakeLists.txt  digit_counting.cpp  digit_counting.h  digit_counting.hpp  main.cpp
homework_4/digit_counter/tests/: CMakeLists.txt  tests.cpp
homework_4/stack_limit/: stack_limit.cpp
